@@ -11,7 +11,7 @@
 register int a __asm (REG1);	// { dg-bogus "'register' storage class specifier used" }
 #endif
 register int b;			// { dg-warning "'register' storage class specifier used" }
-register int c ();		// { dg-error "storage class 'register' invalid for function" }
+register int c ();		// { dg-error "1:storage class 'register' invalid for function" }
 int foo (register int d)	// { dg-warning "'register' storage class specifier used" }
 {
   return d;
