@@ -1,0 +1,1 @@
+main() {}  // { dg-error "1:ISO C\\+\\+ forbids declaration" }
