@@ -1,0 +1,3 @@
+// { dg-options "-w" }
+
+foo() {}  // { dg-error "1:ISO C\\+\\+ forbids declaration" }
